# accipit

./: .gitignore  .gitlab-ci.yml  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: accipit-build.yml  deploy.yml
appendix/: index.html
appendix/accipit-spec/: index.html
appendix/faq/: index.html
appendix/quads2ssa/: index.html
appendix/sysy-accipit-mapping/: index.html
appendix/sysy-runtime/: index.html
appendix/sysy-spec/: index.html
backend/: index.html
changelog/: index.html
css/: custom.css
docs/: accipit-spec.md  ack.md  appendix.md  backend.md  changelog.md  environment.md  index.md  middle-ir-gen.md  semantics.md  spec.md  syntax.md  sysy-spec.md
docs/appendix/: accipit-spec.md  faq.md  index.md  quads2ssa.md  sysy-accipit-mapping.md  sysy-runtime.md  sysy-spec.md
environment/: index.html
examples/: add.acc  array.acc  array_parameter.acc  factorial.acc  global_array.acc  if.acc
examples/toy-calculator/: .gitignore  Makefile  calculator.l  calculator.y  input.txt
middle-ir-gen/: index.html
search/: search_index.json
semantics/: index.html
src/: lib.rs  main.rs
src/apps/: executor.rs  mod.rs
src/frontend/: lexer.rs  mod.rs  new_lexer.rs  parser.rs  token.rs
src/ir/: builders.rs  mod.rs  structures.rs  types.rs  values.rs
src/utils/: display_helper.rs  mod.rs  unique_name.rs
syntax/: index.html
tests/: README.md  test.py
tests/lab1/: add.sy  array1.sy  assign_rvalue.sy  comment1.sy  comment2.sy  div.sy  error1.sy  error2.sy  error3.sy  error4.sy  error_comment.sy  func_name.sy  (+10 more)
(+73 files in other folders)
