[package]
name = "accipit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "1.0.7"
nom = "7.1.3"
chumsky = "1.0.0-alpha.6"
ariadne = { version = "0.4", features = ["auto-color"] }
itertools = "0.12.1"
clap = { version = "4.5", features = ["derive"] }
scanf = "1.2"